#fix -- sticky / overflow

--- a/styles/default.sass
+++ b/styles/default.sass
@@ -9,8 +9,8 @@ html
   box-sizing: border-box
   height: 100vh
   width: 100vw
-  overflow-y: scroll
-  overflow-x: hidden
+  // overflow-y: scroll
+  // overflow-x: hidden
   scroll-behavior: smooth
 
 *, *::before, *::after
